--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -33,14 +33,19 @@ get_all_users:
     controller: App\Controller\ReadController::getAllUsers
     methods: GET
 
-get_meeting_with_participant:
+get_meetings_with_participant:
     path: /get/meetingsWithParticipant
     controller: App\Controller\ReadController::getMeetingsWithParticipant
     methods: GET
 
-get_meeting_with_organizer:
+get_meetings_with_organizer:
     path: /get/meetingsWithOrganizer
     controller: App\Controller\ReadController::getMeetingsWithOrganizer
+    methods: GET
+
+get_participants_with_organizer:
+    path: /get/participantsWithOrganizer
+    controller: App\Controller\ReadController::getParticipantsWithOrganizer
     methods: GET
 
 
