--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,10 @@
       "ext-json": "*"
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.19"
+        "symfony/browser-kit": "5.1.*",
+        "symfony/css-selector": "5.1.*",
+        "symfony/maker-bundle": "^1.19",
+        "symfony/phpunit-bridge": "^5.1"
     },
     "config": {
         "optimize-autoloader": true,
